[project]
name = "objectorientprogramming"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex6776656",email = "burilinas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=1.20.1,<2.0.0)"
]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
## Максимальная длина строки
line-length = 119
## Файлы, которые не нужно форматировать
exclude = '''
/(
\.venv|
\.git|
\.mypy_cache|
\.pytest_cache|
build|
dist
venv
)/
'''
[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
force_single_line = true
